--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Dave Fountain</title>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js" type="text/javascript"></script>
+    <script src="Box.js" type="text/javascript"></script>
+    <script src="BallSketch.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
 </head>
 <body>
-Under Construction
 </body>
 </html>
