--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="BallSketch.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 </head>
-<body>
+<body style="margin: 0; padding: 0; overflow: hidden">
 </body>
 </html>
