--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Dave Fountain</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js" type="text/javascript"></script>
-    <script src="Box.js" type="text/javascript"></script>
+    <script src="P5BoxLib.js" type="text/javascript"></script>
     <script src="BallSketch.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
+    <script src="ColorRaffle.js" type="text/javascript"></script>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden">
 </body>
