--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="P5BoxLib.js" type="text/javascript"></script>
     <script src="BallSketch.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
-    <script src="ColorRaffle.js" type="text/javascript"></script>
+    <script src="HexPalette.js" type="text/javascript"></script>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden">
 </body>
