--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="BallSketch.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <script src="HexPalette.js" type="text/javascript"></script>
+    <script src="rhill-voronoi-core.js" type="text/javascript"></script>
+    <script src="VoronoiSketch.js" type="text/javascript"></script>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden">
 </body>
