--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dave Fountain</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js" type="text/javascript"></script>
     <script src="P5BoxLib.js" type="text/javascript"></script>
+    <script src="Frame.js" type="text/javascript"></script>
     <script src="BallSketch.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <script src="HexPalette.js" type="text/javascript"></script>
