--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Dave Fountain</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js" type="text/javascript"></script>
-    <script src="P5BoxLib.js" type="text/javascript"></script>
-    <script src="Frame.js" type="text/javascript"></script>
-    <script src="BallSketch.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
-    <script src="HexPalette.js" type="text/javascript"></script>
-    <script src="rhill-voronoi-core.js" type="text/javascript"></script>
-    <script src="VoronoiSketch.js" type="text/javascript"></script>
+    <script src="libraries/P5BoxLib.js" type="text/javascript"></script>
+    <script src="sketches/Frame.js" type="text/javascript"></script>
+    <script src="sketches/BallSketch.js" type="text/javascript"></script>
+    <script src="sketches/sketch.js" type="text/javascript"></script>
+    <script src="sketches/HexPalette.js" type="text/javascript"></script>
+    <script src="libraries/rhill-voronoi-core.js" type="text/javascript"></script>
+    <script src="sketches/VoronoiSketch.js" type="text/javascript"></script>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden">
 </body>
