--- a/index2.html
+++ b/index2.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="global.css"/>
-    <script src="p5.min.js" type="text/javascript"></script>
-    <script src="instanceBalls.js" type="text/javascript"></script>
+    <script src="libraries/p5.min.js" type="text/javascript"></script>
+    <script src="sketches/instanceBalls.js" type="text/javascript"></script>
+    <script src="sketches/instanceColorGrains.js" type="text/javascript"></script>
     <title>David Fountain - Sketch Gallery</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
   <div class="holder">
 
       <div class="box">
-          <div class="sketchHeader">Conservation of Energy & Momentum</div>
+          <div class="sketchHeader">Energy & Momentum</div>
           <div class="sketch" id="instanceBalls"></div>
           <div class="sketchLabel">
               <b>p5*js</b>.  Demonstrates the conservation of energy and momentum in elastic collisions between balls.
@@ -20,18 +21,16 @@
       </div>
 
       <div class="box">
-          <div class="sketchHeader">Conservation of Energy & Momentum</div>
-          <div class="sketch" ></div>
-          <div class="sketchLabel"><b>P5*JS</b>.  Uses a tiny library to handle elastic collisions between balls.</div>
+          <div class="sketchHeader">Koala</div>
+          <img class="sketch" src="images/Koala.JPEG" alt="Black and white photo of a koala"></img>
+          <div class="sketchLabel"><b>iPhone 12</b>.  Spotted this chap one morning while walking the dog in Magill.</div>
       </div>
 
       <div class="box">
-          <div class="sketchHeader">Conservation of Energy & Momentum</div>
-          <div class="sketch"></div>
-          <div class="sketchLabel"><b>P5*JS</b>.  Uses a tiny library to handle elastic collisions between balls.</div>
+          <div class="sketchHeader">Colour Grains</div>
+          <div class="sketch" id="instanceColorGrains"></div>
+          <div class="sketchLabel"><b>P5*JS</b>.  Color mixing using pixels.</div>
       </div>
-
-
   </div>
 
 </body>
